Remove package_setup.py and just use setup.py

--- a/emod_api_build_config.json
+++ b/emod_api_build_config.json
@@ -5,7 +5,7 @@
     "packages": [
         {
             "name": "emod_api",
-            "path": "package_setup.py",
+            "path": "setup.py",
             "test_path": ["emod_api/serialization/tests/dtkFileTests.py"],
             "steps": ["build", "build_wheel", "install_wheel", "test"]
         }
