update test_and_publish action to run on main only and only when there is change in the source files or package toml file.

--- a/.github/workflows/build_test_publish.yaml
+++ b/.github/workflows/build_test_publish.yaml
@@ -3,8 +3,10 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - release*
-      - main
+      - 'main'
+    paths:
+      - 'emod_api/**'
+      - 'pyproject.toml'
 jobs:
   build_test_publish:
     runs-on: ubuntu-latest
