Update test actions to only run on PR againt main branch and on Commit to branches that are not main. We run a different action for commit on main already.

--- a/.github/workflows/build_test_ubuntu.yaml
+++ b/.github/workflows/build_test_ubuntu.yaml
@@ -2,12 +2,11 @@ name: Package and test on Ubuntu
 on:
   workflow_dispatch:
   push:
-    branches:
-      - dev-*
+    branches-ignore:
+      - 'main'
   pull_request:
     branches:
-      - release*
-      - main
+      - 'main'
 jobs:
   build_test_ubuntu:
     runs-on: ubuntu-latest
