Modules pyyaml and graphviz are unused; numpy comes with matplotlib and scipy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,26 +17,23 @@ authors = [
     {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"}]
 keywords = ['modeling', 'IDM']
 dependencies = [
-    "numpy!=1.19.4",
-    "pyyaml",
-    "pandas",
     "scipy",
+    "matplotlib",
+    "pandas",
     "shapely",
     "pyproj",
     "geographiclib",
     "scikit-learn",
     "lz4",
     "prodict", # utility for dictionaries
-    "graphviz",
-    "parse",
-    "matplotlib"
-]
+    "parse"]
 license = {text = "MIT"}
 classifiers = [
     "Programming Language :: Python :: 3.9",
     "Framework:: IDM-Tools :: models",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent"]
+
 [project.urls]
 Repository="https://github.com/EMOD-Hub/emod-api"
 Issues="https://github.com/EMOD-Hub/emod-api/issues"
@@ -45,8 +42,7 @@ Issues="https://github.com/EMOD-Hub/emod-api/issues"
 test = [
     "emod-common",
     "emod-generic",
-    "emod-malaria"
-]
+    "emod-malaria"]
 packaging = [
     "build",
     "flake8",  # for lint check
