Refactor docs to use mkdocs

--- a/.github/workflows/build_test_publish.yaml
+++ b/.github/workflows/build_test_publish.yaml
@@ -1,14 +1,19 @@
 name: Package, test, and publish
+
 on:
-  workflow_dispatch:
   push:
     branches:
       - 'main'
     paths:
       - 'emod_api/**'
       - 'pyproject.toml'
+
+  # Allows manual run from the Actions tab
+  workflow_dispatch:
+
 permissions:
   contents: write # Allow writing to the repository (e.g., commits, pushes)
+
 jobs:
   build_test_publish:
     runs-on: ubuntu-latest
