--- a/.github/workflows/emod-api-docs-rebuild.yml
+++ b/.github/workflows/emod-api-docs-rebuild.yml
@@ -1,46 +1,48 @@
-# This workflow will Rebuild emod-api Docs triggered when changes to rst, python or requirements.txt files are intended.
-
 name: Rebuild emod-api docs
+
 on:
   push:
+    branches:
+      - 'main'
     paths: 
-      - '**.py'
-      - '**/*docs/**'
-  pull_request:
-    paths:
-      - '**.py'
-      - '**/*docs/**'
+      - 'mkdocs.yml'
+      - '/docs/**'
+
+  # Allows manual run from the Actions tab
+  workflow_dispatch:
 
 jobs:
-  emod-api-docs-rebuild:
-
+  build-docs:
     runs-on: ubuntu-latest
     steps:
-    - name: Repo Checkout
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.inputs.branch }}
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+      - name: Install packages
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install .[docs]
+      - name: Build static files
+        run: |
+          mkdocs build -d site
+      - name: Upload static files as artifact
+        id: deployment
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: site/
 
-    # Environment Setup
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
-      with:
-          python-version: 3.9
-
-    # emod-api package setup 
-    - name: Install emod-api package
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e . --extra-index-url=https://packages.idmod.org/api/pypi/pypi-production/simple
-
-    # docs 
-    - name: Install documentation build requirements
-      run: |
-        pip install -r docs/requirements.txt --extra-index-url=https://packages.idmod.org/api/pypi/pypi-production/simple
-
-    - name: Build docs - html - no break
-      working-directory: 'docs'
-      run: |
-        make clean
-        make htmlnobreak
-
+  deploy-docs:
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}  # Not used
+    permissions:
+      id-token: write
+      pages: write
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
