--- a/.github/workflows/mkdocs_deploy.yml
+++ b/.github/workflows/mkdocs_deploy.yml
@@ -42,7 +42,7 @@ jobs:
     permissions:
       id-token: write
       pages: write
-    needs: build
+    needs: build-docs
     steps:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
