--- a/.github/workflows/mkdocs_deploy.yml
+++ b/.github/workflows/mkdocs_deploy.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
     paths: 
       - 'mkdocs.yml'
-      - '/docs/**'
+      - 'docs/**'
 
   # Allows manual run from the Actions tab
   workflow_dispatch:
