Change directory manually

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -37,8 +37,8 @@ jobs:
           python -m pip install .[test] --extra-index-url=https://packages.idmod.org/api/pypi/pypi-production/simple
       - name: Run unit tests
         run: |
+          cd tests
           python -m pytest --dist loadfile -v --junitxml="test_results.xml"
-        working-directory: ./tests
       - name: Upload emodpy test results
         uses: actions/upload-artifact@v4
         if: failure()
