added google tag manager for analytics tracking

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,8 +97,8 @@ extra:
     - icon: fontawesome/brands/slack
       link: https://gatesfoundation.enterprise.slack.com/
   analytics:
-    provider: google
-    property: # no tracking until we can implement OneTrust cookie consent
+    provider: custom
+    tracking_id: GTM-NK4K647
     feedback:
       title: Was this page helpful?
       ratings:
