--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: emod-api Documentation
+site_name: emod-api
 site_url: https://emod-hub.github.io/emod-api/
 repo_name: EMOD-Hub/emod-api
 repo_url: https://github.com/EMOD-Hub/emod-api/
