GH-59 - Serialization V6 - Support the new file format where the humans have seperated out from the nodes - keep the interface backward compatible

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "geographiclib",
     "scikit-learn",
     "lz4",
+	"python-snappy==0.6.1"
 ]
 license = "MIT"
 classifiers = [
