--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,10 +2,14 @@ name: Lint
 
 on:
   push:
+    branches:
+        - main
     paths:
-      - '**.py'
+        - '**.py'
 
   pull_request:
+    branches:
+      - main
     paths:
       - '**.py'
 
