--- a/.github/workflows/test_and_bump_version.yml
+++ b/.github/workflows/test_and_bump_version.yml
@@ -17,10 +17,13 @@ permissions:
 jobs:
   run-tests:
     name: Run tests
-    uses: ./.github/workflows/test_all.yml
+    uses: ./.github/workflows/tests_all.yml
 
   bump-version:
+    name: Bump patch version
     runs-on: ubuntu-latest
+    needs:
+      - run-tests
     steps:
       - name: Bump version
         uses: callowayproject/bump-my-version@1.2.6
