--- a/.github/workflows/tests_all.yml
+++ b/.github/workflows/tests_all.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14']
+        max-parallel: 8
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
