--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,6 +16,7 @@ jobs:
     name: Run tests
     runs-on: ${{ matrix.os }}
     strategy:
+      max-parallel: 8
       matrix:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14']
