--- a/.github/workflows/tests_all.yml
+++ b/.github/workflows/tests_all.yml
@@ -34,12 +34,12 @@ jobs:
         shell: bash
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[test]
-      - name: Run unit tests
+          python3 -m pip install --upgrade pip
+          python3 -m pip install .[test]
+      - name: Run tests
         run: |
           cd tests
-          python -m pytest --dist loadfile -v --junitxml="test_results.xml"
+          python3 -m pytest --dist loadfile -v --junitxml="test_results.xml"
       - name: Upload emodpy test results
         uses: actions/upload-artifact@v6
         if: failure()
